HIVE-26948: Backport HIVE-21456 to branch-3

--- a/standalone-metastore/src/test/resources/log4j2.properties
+++ b/standalone-metastore/src/test/resources/log4j2.properties
@@ -22,7 +22,7 @@ appenders = console,captured
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{5} - %msg%n
 
 appender.captured.type = CapturingLogAppender
 appender.captured.name = CAPTURED
@@ -37,3 +37,11 @@ rootLogger.level = debug
 rootLogger.appenderRefs = stdout,captured
 rootLogger.appenderRef.stdout.ref = STDOUT
 rootLogger.appenderRef.captured.ref = CAPTURED
+
+loggers = HttpClient, JettyHttpServer
+
+logger.HttpClient.name = org.apache.http.client
+logger.HttpClient.level = INFO
+
+logger.JettyHttpServer.name = org.eclipse.jetty.server
+logger.JettyHttpServer.level = INFO
