--- a/standalone-metastore/src/test/resources/log4j2.properties
+++ b/standalone-metastore/src/test/resources/log4j2.properties
@@ -15,33 +15,17 @@
 # specific language governing permissions and limitations
 # under the License.
 
-name=PropertiesConfig
-property.filename = logs
-appenders = console,captured
+# list of all appenders
+status = DEBUG
+name = metastorelog4j
+appenders = console
 
+# console appender
 appender.console.type = Console
-appender.console.name = STDOUT
+appender.console.name = consoleLogger
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{5} - %msg%n
+appender.console.layout.pattern = %d{yy/MM/dd HH:mm:ss} %p %c{2}: %m%n
 
-appender.captured.type = CapturingLogAppender
-appender.captured.name = CAPTURED
-
-loggers=file
-logger.file.name=guru.springframework.blog.log4j2properties
-logger.file.level = debug
-logger.file.appenderRefs = file
-logger.file.appenderRef.file.ref = LOGFILE
-
-rootLogger.level = debug
-rootLogger.appenderRefs = stdout,captured
-rootLogger.appenderRef.stdout.ref = STDOUT
-rootLogger.appenderRef.captured.ref = CAPTURED
-
-loggers = HttpClient, JettyHttpServer
-
-logger.HttpClient.name = org.apache.http.client
-logger.HttpClient.level = INFO
-
-logger.JettyHttpServer.name = org.eclipse.jetty.server
-logger.JettyHttpServer.level = INFO
+# root logger
+rootLogger.level = DEBUG
+rootLogger.appenderRef.stdout.ref = consoleLogger
